# py-fido

./: .editorconfig  .flake8  .gitignore  Pipfile  README.md  README.rst  mypy.ini  pyproject.toml  setup.cfg  setup.py
docs/: Makefile
docs/source/: conf.py  full_api.rst  index.rst
docs/source/_static/css/: overrides.css
fido_u2f/: _typing.py  constants.py  device.py  device.pyi  enums.py  exceptions.py  registration.py  utils.py  verification.py
fido_u2f/sample/: device.py  flask.py  login.js  register.js  tables.py
fido_u2f/tests/: test_response_parse_validate.py  test_utils.py
